# climafeis

./: README.md  climascraper.py  demo.py  pyproject.toml  requirements.txt
api/: api.py  parser.py
climafeis/: climascraper.py
