[tool.poetry]
name = "climafeis"
version = "1.0.1"
description = "Scrape climate date from clima.feis.unesp.br"
authors = ["João Fauvel"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
numpy = "^1.23.5"
pandas = "^1.5.2"
beautifulsoup4 = "^4.11.1"

[tool.poetry.scripts]
climafeis = 'climafeis.climascraper:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
