[tool.poetry]
name = "climafeis"
version = "1.0.1"
description = "Scrape dados climáticos de clima.feis.unesp.br"
authors = ["João Fauvel <jmmfauvel@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
numpy = "^1.23.5"
pandas = "^1.5.2"
beautifulsoup4 = "^4.11.1"

[tool.poetry.scripts]
climafeis = 'climafeis.climascraper:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
